--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "rollup -c && node lib/move-output.js",
-    "debug": "node --inspect-brk node_modules/.bin/rollup -c",
-    "dev": "rollup -cw & npm run serve",
-    "serve": "http-server -c-1 .tmp/build/static | head -5",
-    "linktests": "ln -s '../../../tests' .tmp/build/static/tests",
-    "atest": "cd \"tests/$TEST\" && npm i --no-progress --no-fund --no-audit --prefer-offline --cache-min 9999999 --no-package-lock && npm run -s build"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^8.1.0",
