--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "devDependencies": {
     "@astrojs/mdx": "^3.1.9",
     "astro": "^4.16.8",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "lucide": "^0.454.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.6.3"
   },
   "husky": {
