--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "lucide": "^0.454.0",
+    "playwright": "^1.48.2",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
   },
