--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.9",
+    "@types/semver": "^7.5.8",
     "astro": "^4.16.8",
     "expect": "^29.7.0",
     "husky": "^9.1.6",
@@ -18,6 +19,7 @@
     "lucide": "^0.454.0",
     "playwright": "^1.48.2",
     "prettier": "^3.3.3",
+    "semver": "^7.6.3",
     "typescript": "^5.6.3"
   },
   "husky": {
