--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "test": "vitest"
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.9",
@@ -20,7 +21,8 @@
     "playwright": "^1.48.2",
     "prettier": "^3.3.3",
     "semver": "^7.6.3",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.4"
   },
   "husky": {
     "hooks": {
