Make the deno executor more flexible

--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
   },
   "devDependencies": {
     "@astrojs/mdx": "^3.1.9",
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-replace": "^6.0.1",
     "@types/semver": "^7.5.8",
+    "@vitest/expect": "^2.1.4",
     "astro": "^4.16.8",
+    "chai": "^5.1.2",
     "expect": "^29.7.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "lucide": "^0.454.0",
     "playwright": "^1.48.2",
     "prettier": "^3.3.3",
+    "rollup": "^4.25.0",
     "semver": "^7.6.3",
     "typescript": "^5.6.3",
     "vitest": "^2.1.4"
